# poetry_4051

./: .gitignore  PKG-INFO  README.md  pyproject.toml  setup.py
dep_a/: __init__.py  test_dep_c.py  test_grpc.py
dep_b/: __init__.py
