[tool.poetry]
name = "dep_b"
version = "0.1.0"
description = ""
authors = ['mtraynham <test@test.com>']

[tool.poetry.dependencies]
python = "^3.8"
dep_c = { git = 'https://github.com/mtraynham/poetry_4051.git', rev = 'f886f69d' }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
